[package]
name = "payment_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
anyhow = "1.0.53"
serde = { version = "1.0.136", features = ["derive"] }
clap = { version = "3.0.14", features = ["derive"] }
